k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-worker
  namespace: lms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lms-worker
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: lms-worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/OWNER/REPO-worker:latest
