k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lms-app
  namespace: lms
spec:
  selector:
    app: lms-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
